# indoor-tracker

./: .gitignore  2d_xwr68xxconfig_output.csv  3d_xwr68xxconfig.cfg  3d_xwr68xxconfig_output.csv  CMakeLists.txt  DEFESA_JAYME.pptx  README.md  Resultado.eps  T048_MMW_A1_BLE_C2P3_mmwave_data.csv  abc.csv  apply_aoa_median_filter_to_ble.bat  apply_aoa_median_filter_to_ble.sh  apply_dataset_filter.bat  apply_dataset_filter.sh  ble_mmwave_fusion_all.csv  centralized_vs_decentralized_fusion.puml  error_by_distance.csv  exported_T029_MMW_A1_BLE_C3P1_mmwave_fusion.csv  exported_T030_MMW_A1_BLE_C3P2_mmwave_fusion.csv  exported_T031_MMW_A1_BLE_C3P3_mmwave_fusion.csv  exported_T032_MMW_A1_BLE_C3P4_mmwave_fusion.csv  exported_T033_MMW_A1_BLE_C3P5_mmwave_fusion.csv  exported_T034_MMW_A1_BLE_C4PA_mmwave_fusion.csv  exported_T047_MMW_A1_BLE_C2P1_mmwave_fusion.csv  exported_T048_MMW_A1_BLE_C2P2_mmwave_fusion.csv  exported_T049_MMW_A1_BLE_C2P3_mmwave_fusion.csv  exported_T050_MMW_A1_BLE_C2P4_mmwave_fusion.csv  exported_T051_MMW_A1_BLE_C2P5_mmwave_fusion.csv  exported_T052_MMW_A1_BLE_C4P4_mmwave_fusion.csv  exported_T053_MMW_A1_BLE_C4P5_mmwave_fusion.csv  exported_T054_MMW_A1_BLE_C4P6_mmwave_fusion.csv  exported_T055_MMW_A1_BLE_C3P5_mmwave_fusion.csv  exported_T056_MMW_A1_BLE_C3P4_mmwave_fusion.csv  exported_T057_MMW_A1_BLE_C3P3_mmwave_fusion.csv  exported_T058_MMW_A1_BLE_C3P2_mmwave_fusion.csv  exported_T059_MMW_A1_BLE_C4P1_mmwave_fusion.csv  exported_T060_MMW_A1_BLE_C1P5_mmwave_fusion.csv  fusion_pipeline.puml  mmw_demo_output.csv  mmw_parse_script.py  (+13 more)
3d/: iwr6843isk mount v8.f3d  iwr6843isk mount v8.stl
Results/: ble_mmwave_fusion_all.csv  createtimetodt.py  merge_datasets.py  notes_10_02.txt  notes_15_01.txt  notes_17_03.txt  notes_25_03.txt  notes_28_04.txt  resultado_RADAR_C3_AND_178_JM_R5.csv  resultado_RADAR_C3_PRD_P12_178_JM.csv  resultado_RADAR_C3_PRD_P13_178_JM.csv  resultado_RADAR_C3_PRD_P14_178_JM.csv  resultado_RADAR_C3_PRD_P15_178_JM.csv  resultado_RADAR_C3_PRD_PA_178_JM.csv  resultado_RADAR_C3_PRD_PA_178_JM_datetime.csv
Results/T029_MMW_A1_BLE_C3P1/: T029_MMW_A1_BLE_C3P1_mmwave_data.csv  exported_T029_MMW_A1_BLE_C3P1.txt
Results/T030_MMW_A1_BLE_C3P2/: T030_MMW_A1_BLE_C3P2_mmwave_data.csv  exported_T030_MMW_A1_BLE_C3P2.txt
Results/T031_MMW_A1_BLE_C3P3/: T031_MMW_A1_BLE_C3P3_mmwave_data.csv  exported_T031_MMW_A1_BLE_C3P3.txt
Results/T032_MMW_A1_BLE_C3P4/: T032_MMW_A1_BLE_C3P4_mmwave_data.csv  exported_T032_MMW_A1_BLE_C3P4.txt
Results/T033_MMW_A1_BLE_C3P5/: T033_MMW_A1_BLE_C3P5_mmwave_data.csv  exported_T033_MMW_A1_BLE_C3P5.txt
Results/T034_MMW_A1_BLE_C4PA/: T034_MMW_A1_BLE_C4PA_mmwave_data.csv  exported_T034_MMW_A1_BLE_C4PA.txt
Results/T035_MMW_A1_BLE_CVP1/: T035_MMW_A1_BLE_CVP1_mmwave_data.csv  exported_T035_MMW_A1_BLE_CVP1.txt
Results/T036_MMW_A1_BLE_CVP2/: T036_MMW_A1_BLE_CVP2_mmwave_data.csv  exported_T036_MMW_A1_BLE_CVP2.txt
Results/T037_MMW_A1_BLE_CVP3/: T037_MMW_A1_BLE_CVP3_mmwave_data.csv  exported_T037_MMW_A1_BLE_CVP3.txt
Results/T038_MMW_A1_BLE_CVP4/: T038_MMW_A1_BLE_CVP4_mmwave_data.csv  exported_T038_MMW_A1_BLE_CVP4.txt
Results/T038_MMW_A1_BLE_CVP5/: T038_MMW_A1_BLE_CVP5_mmwave_data.csv  exported_T038_MMW_A1_BLE_CVP5.txt
Results/T040_MMW_A1_BLE_C4PV/: T040_MMW_A1_BLE_C4PV_mmwave_data.csv  exported_T040_MMW_A1_BLE_C4PV.txt
Results/T047_MMW_A1_BLE_C2P1/: T047_MMW_A1_BLE_C2P1_mmwave_data.csv  exported_T047_MMW_A1_BLE_C2P1.txt
Results/T048_MMW_A1_BLE_C2P2/: T048_MMW_A1_BLE_C2P2_mmwave_data.csv  exported_T048_MMW_A1_BLE_C2P2.txt
Results/T049_MMW_A1_BLE_C2P3/: T049_MMW_A1_BLE_C2P3_mmwave_data.csv  exported_T049_MMW_A1_BLE_C2P3.txt
Results/T050_MMW_A1_BLE_C2P4/: T050_MMW_A1_BLE_C2P4_mmwave_data.csv  exported_T050_MMW_A1_BLE_C2P4.txt
Results/T051_MMW_A1_BLE_C2P5/: T051_MMW_A1_BLE_C2P5_mmwave_data.csv  exported_T051_MMW_A1_BLE_C2P5.txt
Results/T052_MMW_A1_BLE_C4P4/: T052_MMW_A1_BLE_C4P4_mmwave_data.csv  exported_T052_MMW_A1_BLE_C4P4.txt
Results/T053_MMW_A1_BLE_C4P5/: T053_MMW_A1_BLE_C4P5_mmwave_data.csv  exported_T053_MMW_A1_BLE_C4P5.txt
Results/T054_MMW_A1_BLE_C4P6/: T054_MMW_A1_BLE_C4P6_mmwave_data.csv  exported_T054_MMW_A1_BLE_C4P6.txt
Results/T055_MMW_A1_BLE_C3P5/: T055_MMW_A1_BLE_C3P5_mmwave_data.csv  exported_T055_MMW_A1_BLE_C3P5.txt
Results/T056_MMW_A1_BLE_C3P4/: T056_MMW_A1_BLE_C3P4_mmwave_data.csv  exported_T056_MMW_A1_BLE_C3P4.txt
Results/T057_MMW_A1_BLE_C3P3/: T057_MMW_A1_BLE_C3P3_mmwave_data.csv  exported_T057_MMW_A1_BLE_C3P3.txt
cfg/: ISK_14m_extended.cfg
fusion_bench/methods/: DeepFusion.py  ISensorFusion.py
sigivest/: __init__.py  ble_query_helper.py
src/: CMakeLists.txt  IWRAPP.cpp  main.cpp  parser.cpp  parser.hpp
src/BLE/: CMakeLists.txt
src/IMU/: CMakeLists.txt
src/frames/: AreaScannerFrame.cpp  AreaScannerFrame.hpp  DemoFrame.cpp  DemoFrame.hpp  IFrame.hpp  PeopleTrackingFrame.cpp  PeopleTrackingFrame.hpp  output.csv
src/mmWave/: CMakeLists.txt  IWRAPP.cpp  parser.cpp
src/mmWave/frames/: AreaScannerFrame.cpp  DemoFrame.cpp  PeopleTrackingFrame.cpp
src/sensor_fusion/: CMakeLists.txt
tests/: CMakeLists.txt  area_scanner_tests.cpp  my_tests.cpp
tools/: area_scanner_parser.cpp  bib_audit.py  ble_aoa_improver.py  calculate_centroid.py  calculate_mse_mae_rmse.py  constants.py  covariance_intersection.py  deep_fusion.py  deep_kalman.py  filter_dataset.py  filter_dataset_columns.py  fix_dataset_origin.py  fix_mmwave_spherical_to_carthesian.py  fuse_sensor_data.py  fuse_sensor_ttf_yble_xmmw.py  kf_divergence.py  mmWaveBLEFusionLab.py  mmw_parse_script.py  multi_sensor_kf.py  output_lab_tag.csv  output_lab_tag_centroid.csv  output_transformed.csv  output_transformed_centroid.csv  pdftotext.py  plot_biggest_mmwave_pointcloud.py  plot_covariance_ellipses.py  plot_dataset.py  plot_dataset_2d.py  plot_dataset_animation.py  plot_dataset_animation2d.py  plot_error_gaussian.py  plot_errors_by_distance.py  plot_experimental_setup.py  plot_fusion_footprint.py  plot_gnss_vs_ips.py  plot_mse_rmse_by_distance.py  plot_rmse_formulation.py  plot_room_2d.py  plot_sensor_fusion_animation.py  pre_process_dataset.py  (+4 more)
(+82 files in other folders)
